Fix mobile overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+
 }
 
 :root {
@@ -16,6 +18,7 @@ body {
     background-color: var(--bg-dark);
     color: var(--text-light);
     font-family: 'Segoe UI', sans-serif;
+    overflow-x: hidden;
 }
 
 html {
